src/objects/Translation_Key__c.object
<CustomObject>
    <fields>
        <fullName>Default_Label__c</fullName>
        <label>Default Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Context__c</fullName>
        <label>Translation Context</label>
        <referenceTo>Translation_Context__c</referenceTo>
        <relationshipLabel>Translation Keys</relationshipLabel>
        <relationshipName>Translation_Keys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Translation Key</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Keys</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Key__c</columns>
        <columns>Default_Label__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Keys</label>
    </listViews>
    <nameField>
        <displayFormat>TKN-{0000000000}</displayFormat>
        <label>Translation Key Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translation Keys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>